# demon-lord-just-a-block

./: .clang-format  .clangd  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  run.sh
.claude/skills/clangd-pcm-lock/: SKILL.md
.claude/skills/export-assets/: SKILL.md
.claude/skills/raygui-hpp/: SKILL.md
.claude/skills/raylib-hpp/: SKILL.md
assets/shaders/: outline.fs
cmake/: EnableCxxImportStd.cmake
docs/: book.toml
src/: CMakeLists.txt  application.cpp  application.hpp  assets.cpp  assets.hpp  cursor_layer.cpp  cursor_layer.hpp  font_spec.hpp  game_layer.cpp  game_layer.hpp  gameplay_scene.cpp  gameplay_scene.hpp  grid.cpp  grid.hpp  imgui_layer.cpp  imgui_layer.hpp  layer.hpp  log.cpp  log.hpp  main.cpp  main_menu_layer.cpp  main_menu_layer.hpp  main_menu_scene.cpp  main_menu_scene.hpp  player.cpp  player.hpp  scene.hpp  scene_host_layer.cpp  scene_host_layer.hpp  scene_manager.cpp  scene_manager.hpp  text_outliner.cpp  text_outliner.hpp  tile_editor_layer.cpp  tile_editor_layer.hpp  window_state.cpp  window_state.hpp
src/scenes/: gameplay_scene.cpp  main_menu_scene.cpp  main_menu_scene.hpp
